fix: color and gap

--- a/src/components/categoryBlock/categoryBlock.module.scss
+++ b/src/components/categoryBlock/categoryBlock.module.scss
@@ -141,7 +141,7 @@
         border-radius: 40px;
         border: 1px solid;
 
-        //gap: 20px;
+        gap: 20px;
 
         background-color: $white;
         @include laptop {
