--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -5,6 +5,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  //-webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
   //border: 1px solid red;
 }
 
@@ -45,6 +46,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 a {
@@ -100,6 +102,8 @@ h1 {
   background-color: $KK !important;
   color: $black !important;
   font-weight: 500 !important;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
+
   @include laptop {
     border-radius: 3.57vw !important;
     height: 100% !important;
@@ -115,7 +119,7 @@ h1 {
 #closeModal {
   //position: absolute;
   //top: 0px;
-
+  -webkit-tap-highlight-color: red !important;
   right: 0;
   z-index: 1000;
   height: 40px;
@@ -140,11 +144,14 @@ h1 {
   display: flex;
   justify-content: flex-end;
   padding: 20px 0;
-
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0) !important;
   @include mobile {
     background-color: $KK !important;
 
   }
+}
+.MuiButton-root {
+  color: rgba(0,0,0,0) !important;
 }
 
 .MuiDialogContentText-root {
